--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@google/generative-ai": "^0.2.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
